# fluid-sim

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  imgui.ini  plan.md
benchmark/: collision_cost_collider_count.py  collision_cost_particle_count.py  phase_breakdown.py  profiler.cpp  profiler.h  profiler.h~  run_benchmarks.ps1  run_sdf_benchmarks.ps1  scaling_behaviour.py
benchmarks/: benchmark.cpp  benchmark_plotting.ipynb  run_benchmarks.ps1  run_benchmarks.sh
benchmarks/data/: bench_3f0929a.csv  bench_450dc0d.csv  bench_a18f655.csv  bench_ba01342.csv  bench_d0fbc7e.csv  bench_e410923.csv  bench_f00fbb3.csv
dependencies/glad/: glad.h
dependencies/imgui/: imgui_demo.cpp
memory/: feedback_commit_style.md
src/: #particles.h#  Cell.cpp  Cell.h  Particles.cpp  cell.cpp  cell.h  colors.h  config.h  cuda_buffers.cu  cuda_buffers.cuh  geometry.cpp  geometry.h  glad.c  grid.cpp  grid.h  helpers.h  line_renderer.cpp  line_renderer.h  linear_algebra.cpp  linear_algebra.h  main.cpp  particle.cpp  particle.h  particle_config.cpp  particle_config.h  particle_mesh.cpp  particle_mesh.h  particles.cpp  particles.cpp~  particles.cu  particles.cuh  particles.h  triangle_mesh.cpp  triangle_mesh.h
src/app/: app_state.h  camera.h  input_state.h  scene_manager.h  simulation_control.h  viewport.h
src/objects3d/: editor_state.h  grid_state.h  object_builder.cpp  object_builder.h  object_collision.cpp  object_collision.h  object_renderer.cpp  object_renderer.h  sdf_collision.cpp  sdf_collision.h
src/physics3d/: machine_object.h  machine_object_system.cpp  machine_object_system.h  obstacle.cpp  obstacle.h  obstacle_system.cpp  obstacle_system.h  wireframe_renderer.cpp  wireframe_renderer.h
src/shaders/: fragment.glsl  fragment.txt  grid_fragment.glsl  grid_vertex.glsl  overlay_fragment.glsl  overlay_vertex.glsl  solid_fragment.glsl  solid_vertex.glsl  vertex.glsl  vertex.txt  wireframe_fragment.glsl  wireframe_vertex.glsl
src/systems/: camera_system.cpp  camera_system.h  control_system.cpp  control_system.h  hud_system.cpp  hud_system.h  input_system.cpp  input_system.h  raycasting_system.cpp  raycasting_system.h  render_system.cpp  render_system.h
